--- a/web/index.ejs
+++ b/web/index.ejs
@@ -63,7 +63,7 @@
                                             <% }); %>
                                         </p>
 
-                                        <p class="text-heading-light">RadioText</p>
+                                        <p class="text-heading-light">Radiotext</p>
                                         <p>
                                             <%= frequency.rt0 %><br>
                                             <%= frequency.rt1 %>
