added better logo support

--- a/web/index.ejs
+++ b/web/index.ejs
@@ -95,10 +95,10 @@
                                         </p>
                                     </div>
                                     <div style="text-align: right;width:25%; position: relative;">
-                                        <img src="https://tef.noobish.eu/logos/<%= frequency.txInfo?.itu %>/<%= frequency.pi %>.png" height="64"><br>
+                                        <img class="frequency-logo" data-src="https://tef.noobish.eu/logos/<%= frequency.txInfo?.itu %>/<%= frequency.pi %>.png" height="64"><br>
                                         <a href="https://maps.fmdx.org/#qth=<%= info.qthLatitude %>,<%= info.qthLongitude %>&freq=<%= frequency.freq %>&findPi=<%= frequency.pi %>" target="_blank">
-                                        <img src="./img/map.png" style="position: absolute; right: 0; bottom: 0;" alt="Show on maps">
-                                    </a>
+                                            <img src="./img/map.png" style="position: absolute; right: 0; bottom: 0;" alt="Show on maps">
+                                        </a>
                                     </div>
                                 </div>
                             </div>
