--- a/web/index.ejs
+++ b/web/index.ejs
@@ -22,7 +22,7 @@
                 <h2 style="text-align: center;"><span style="font-weight: 100">Connected to </span> <%= info.tunerName %></h2>
                 <h4 style="text-align: center; font-weight: 100; margin-bottom: 20px;color: var(--color-5)">Powered by FM-DX Webserver</h4>
 
-                <div class="chart-panel" style="margin-bottom: 25px;display: block;padding: 0;">
+                <div class="chart-panel station-panel" style="margin-bottom: 25px;display: block;padding: 0;">
 
                     <% if (info.ant.enabled) { %>
                         <div style="display: flex; text-align: center; border-radius: 15px 15px 0 0; overflow: hidden;">
@@ -43,6 +43,52 @@
  
                     <div class="signal-chart-container" style="height: 350px;padding: 20px;">
                         <canvas id="signal-chart"></canvas>
+                    </div>
+                    <div class="chart-panel-more" style="text-align: center">
+                        <img src="./img/arrow.svg" width="64">
+                    </div>
+                    <div class="station-panel-details chart-panel-details" style="display: none;">
+                        <div style="width: 100%;text-align: center;">
+                            <h2 style="font-weight: 300; color: var(--color-main-bright);font-size: 38px;">Statistics</h2>
+                        </div>
+                        <div style="display: flex;">
+                            <div style="background-color: var(--color-2-transparent); border-radius: 15px;padding: 10px;width: 33%;text-align: center;margin: 5px;">
+                                <h3 style="font-weight: 300; color: var(--color-main-bright);font-size: 32px;margin: 0;">Total stations</h2>
+                                    <p style="font-size: 28px;font-weight: 300;" id="total-stations"></p>
+                            </div>
+                            <div style="background-color: var(--color-2-transparent); border-radius: 15px;padding: 10px;width: 33%;text-align: center;margin:5px;">
+                                <h3 style="font-weight: 300; color: var(--color-main-bright);font-size: 32px;margin: 0;">Most distant transmitter</h2>
+                                    <p style="font-size: 28px;font-weight: 300;" id="distant-station"></p>
+                                    <p id="distant-station-details"></p>
+                            </div>
+                            <div style="background-color: var(--color-2-transparent); border-radius: 15px;padding: 10px;width: 33%;text-align: center;margin:5px;">
+                                <h3 style="font-weight: 300; color: var(--color-main-bright);font-size: 32px;margin: 0;">Closest transmitter</h2>
+                                    <p style="font-size: 28px;font-weight: 300;" id="closest-station"></p>
+                                    <p id="closest-station-details"></p>
+                            </div>
+                        </div>
+
+                        <div style="display: flex;">
+                            <div style="border-radius: 15px;padding: 10px;width: 50%;text-align: center;margin:5px;">
+                                <h3 style="font-weight: 300; color: var(--color-main-bright);font-size: 32px;margin: 0;">Stations by country</h3>
+                                <div style="height: 300px;">
+                                    <canvas style="margin: auto;" id="ituDonutChart"></canvas>
+                                </div>
+                            </div>
+                            <div style="border-radius: 15px;padding: 10px;width: 50%;text-align: center;margin:5px;">
+                                <h3 style="font-weight: 300; color: var(--color-main-bright);font-size: 32px;margin: 0;">Stations by genre</h3>
+                                <div style="height: 300px;">
+                                    <canvas style="margin: auto;" id="ptyDonutChart"></canvas>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div style="width: 100%;text-align: center;">
+                            <h3 style="font-weight: 300; color: var(--color-main-bright);font-size: 32px;margin: 0;">Polarization distribution</h3>
+                            <div style="height: 150px;width: 100%; position: relative;">
+                                <canvas id="polBarChart" style="margin: auto;width: 100%; height: 100%;"></canvas>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -108,6 +154,8 @@
                 
             </div>
         </div>
+        <script src="./js/dashboard.js"></script>
         <script src="./js/main.js"></script>
+
     </body>
 </html>
