--- a/web/index.ejs
+++ b/web/index.ejs
@@ -24,7 +24,7 @@
 
                 <div class="chart-panel station-panel" style="margin-bottom: 25px;display: block;padding: 0;">
 
-                    <% if (info.ant.enabled) { %>
+                    <% if (info.ant?.enabled) { %>
                         <div style="display: flex; text-align: center; border-radius: 15px 15px 0 0; overflow: hidden;">
                             <% if (info.ant.ant1.enabled) { %>
                                 <div class="antenna-button active" id="ant-0"><%= info.ant.ant1.name %></div>
