--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -37,9 +37,6 @@ body {
     background-color: rgba(11, 12, 14, 0.75);
     width: 100%;
     height: auto;
-    display: grid;
-    align-items: center;
-    justify-content: center;
     min-height: 100vh;
 }
 
@@ -178,7 +175,79 @@ h2, h4, p {
     text-align: right;
 }
 
+footer {
+    width: 100%;
+    text-align: center;
+    background-color: var(--color-1-transparent);
+    padding-bottom: 20px;
+    padding-top: 20px;
+    margin-top: 50px;
+}
+
+footer ul {
+    padding: 0;
+    margin: 0;
+    margin-bottom: 15px;
+}
+
+footer ul li {
+    display: inline;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+footer a {
+    text-decoration: none;
+    color: var(--color-text);
+}
+
+footer p a {
+    color: var(--color-main-bright);
+    font-weight: 700;
+}
+
+#rds-flags td {
+    padding: 10px;
+}
+
+.circle-container {
+    position: relative;
+    width: 25px;
+    height: 34px;
+}
+
+.circle {
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    border: 2px solid var(--color-3);
+    border-radius: 50%;
+}
+
+.circle.circle1 {
+    left: 0px;
+    top: 10px;
+}
+
+.circle.circle2 {
+    left: 8px;
+    top: 10px;
+}
+
+.color-3 {
+    border-color: var(--color-3);
+    color: var(--color-3);
+}
+
+.color-4 {
+    border-color: var(--color-4);
+    color: var(--color-4);
+}
+
 @media (max-width: 1280px) {
+    .hide-phone {
+        display: none;
+    }
     .wrapper {
         width: 95%;
     }
@@ -194,8 +263,9 @@ h2, h4, p {
         width: 100% !important;
     }
     .station-panel-right {
-        text-align: center;
         width: 100% !important;
+        display: flex;
+        justify-content: center;
     }
     .station-panel-more {
         font-size: 16px !important;
@@ -220,5 +290,18 @@ h2, h4, p {
 
     .station-panel {
         padding: 10px;
+    }
+
+    footer {
+        padding: 25px;
+    }
+
+    footer ul li {
+        display: block;
+        padding: 8px;
+    }
+
+    footer ul li a {
+        padding: 8px;
     }
   }
