--- a/web/index.ejs
+++ b/web/index.ejs
@@ -18,7 +18,7 @@
     <body style="background-image: url('<%= info.bgImage ? info.bgImage : null %>')">
         <div id="wrapper-outer">
             <div class="wrapper">
-                <h1 style="text-align: center; margin-top: 25px;font-weight: 100;color: var(--color-main-bright);">FM-DX Monitoring</h1>
+                <h1 style="text-align: center; margin-top: 0;padding-top: 25px;font-weight: 100;color: var(--color-main-bright);">FM-DX Monitoring</h1>
                 <h2 style="text-align: center;"><span style="font-weight: 100">Connected to </span> <%= info.tunerName %></h2>
                 <h4 style="text-align: center; font-weight: 100; margin-bottom: 20px;color: var(--color-5)">Powered by FM-DX Webserver</h4>
 
@@ -111,18 +111,25 @@
                                     <span class="station-panel-ps"><%= frequency.ps ? frequency.ps : '.' %></span>
                                 </div>
                                 <div class="station-panel-center" style="width: 50%;">
-                                    <span style="font-size: 14px; color: var(--color-4)">Date: </span> <span style="font-size: 14px;color: var(--color-3)"><%= frequency.date %></span><br>
-                                    <span style="color: var(--color-4);font-weight: 700;margin-right: 25px;"><%= (frequency.sig - 11.25).toFixed(0) %> dBμV</span>
-                                    <%= frequency.rt0 == "" ? frequency.rt1 : frequency.rt0  %>
+                                    <span style="font-size: 14px;" class="color-4">Date: </span> <span style="font-size: 14px;color: var(--color-3)"><%= frequency.date %></span><br>
+                                    <span style="font-weight: 700;" class="color-4"><%= (frequency.sig - 11.25).toFixed(0) %> dBμV</span>
+                                    <span class="hide-phone" style="margin-left: 25px;"><%= frequency.rt0 == "" ? frequency.rt1 : frequency.rt0  %></span>
                                 </div>
-                                <div class="station-panel-right" style="width: 30%;text-align: center">
-                                    <strong style="font-size: 20px;">
-                                        <%- frequency.tp == 1 ? 'TP' : '<span style="opacity:0.3">TP</span>' %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                        <%- frequency.st == 1 ? 'ST' : '<span style="opacity:0.3">ST</span>' %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                        <%= frequency.pty %>
-                                    </strong>
+                                <div class="station-panel-right" style="width: 30%;padding-left: 20px;padding-right: 20px;">
+                                    <table id="rds-flags">
+                                        <tr style="font-size: 20px;;">
+                                            <td style="font-weight: 700;"><%- frequency.tp == 1 ? 'TP' : '<span style="opacity:0.3">TP</span>' %></td>
+                                            <td>
+                                                <div class="circle-container">
+                                                    <div class="circle data-st circle1 <%= frequency.st == 1 ? 'color-4' : 'color-3' %>" style="left: 0px;"></div>
+                                                    <div class="circle data-st circle2 <%= frequency.st == 1 ? 'color-4' : 'color-3' %>" style="display: block;"></div>
+                                                </div>
+                                            </td>
+                                            <td><%- frequency.pty == "No PTY" ? "<span style='opacity: 0.5;'>No PTY</span>" : frequency.pty %></td>
+                                        </tr>    
+                                    </table>
                                 </div>
-                                <div class="station-panel-more" style="width: 15%;display: flex;align-items: center;justify-content: center;">
+                                <div class="station-panel-more" style="width: 150px;display: flex;align-items: center;justify-content: center;">
                                     <img src="./img/arrow.svg" width="24">
                                 </div>
                             </div>
@@ -165,8 +172,18 @@
                         </div>
                     <% } 
                 }) %>                
-                
             </div>
+            <footer>
+                <ul>
+                    <li><a href="https://servers.fmdx.org" target="_blank">Server list</a></li>
+                    <li><a href="https://github.com/noobishsvk/fm-dx-monitoring" target="_blank">Source code</a></li>
+                    <li><a href="https://discord.gg/ZAVNdS74mC" target="_blank">Community</a></li>
+                    <li><a href="https://buymeacoffee/fmdx" target="_blank">Support the project</a></li>    
+                </ul>
+                <p style="opacity: 0.7; font-size: 14px;">
+                    Transmitter identification data by <a href="https://fmlist.org" target="_blank">FMLIST.org</a> • FM-DX Monitoring &copy; <a href="https://fmdx.org" target="_blank">FMDX.org</a>
+                </p>
+                </footer>
         </div>
         <script src="./js/dashboard.js"></script>
         <script src="./js/main.js"></script>
